--- a/public/category.html
+++ b/public/category.html
@@ -25,14 +25,45 @@
               
               <ul class="menulist">
                 <li><a class="menuitems" href="#about">ABOUT</a></li>  
-                <li><a class="menuitems" href="login.html">LOG OUT</a></li>					
+                <li><a class="menuitems" href="#category">CATEGORY</a></li>					
                 <li><a class="menuitems" href="#contact">CONTACT</a></li>
+                <li><a class="menuitems" href="login.html">LOG OUT</a></li>
+
               </ul>			
               </div>
               
               <div id="main">
               </div>
-    <header><img src="logo.jpg" id="logopic" alt="logo"></header>
+    <header><a href="category.html"><img src="logo.jpg" id="logopic" alt="logo"></a></header>
+
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br><br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 
     <div id="category">
         <h1 id="cat">What is your issue today?</h1>
