--- a/public/counselorlist.html
+++ b/public/counselorlist.html
@@ -26,7 +26,6 @@
               <ul class="menulist">
                 <li><a class="menuitems" href="category.html">HOME</a></li>  
                 <li><a class="menuitems" href="login.html">LOG OUT</a></li>					
-                <li><a class="menuitems" href="#contact">CONTACT</a></li>
               </ul>			
               </div>
               
@@ -39,6 +38,7 @@
             <p><h3>Beyonce</h3></p>
             <p>Counselor</p>
             <span class="time-right">On-Air</span>
+            <button class="button" id="chatbtn"><a href="chatroom.html">Chat</a></button>
           </div>
 
           <div class="container2">
@@ -46,6 +46,7 @@
                 <p><h3>Jay-Z</h3></p>
                 <p>Counselor</p>
                 <span class="time-right">On-Air</span>
+                <button class="button" id="chatbtn">Chat</button>
               </div>
 
               <div class="container3">
@@ -53,6 +54,7 @@
                     <p><h3>Eminem</h3></p>
                     <p>Counselor</p>
                     <span class="time-right">Offline</span>
+                    <button class="button" id="chatbtn">Chat</button>
                   </div>
 
                   <div class="container4">
@@ -60,6 +62,7 @@
                         <p><h3>PSY</h3></p>
                         <p>Counselor</p>
                         <span class="time-right">Offline</span>
+                        <button class="button" id="chatbtn">Chat</button>
                       </div>
 
 
