Got most some more redirect stuff working

--- a/public/login.html
+++ b/public/login.html
@@ -38,6 +38,10 @@
               placeholder="Password"
               class="input"
             /><br />
+            <select name="type">
+              <option value="student">I am a student</option>
+              <option value="counselor">I am a counselor</option> </select
+            ><br />
             <div>
               <input class="submitButton" type="submit" value="Log In" />
             </div>
