--- a/public/category.html
+++ b/public/category.html
@@ -68,12 +68,12 @@
     <div id="category">
         <h1 id="cat">What is your issue today?</h1>
 <div id="btn">
-        <p><button class="w3-btn w3-block w3-whitesmoke"><a href="counselorlist.html">Bully</a></button></p>
-        <p><button class="w3-btn w3-block w3-whitesmoke">Academic</button></p>
-        <p><button class="w3-btn w3-block w3-whitesmoke">Career</button></p>
-        <p><button class="w3-btn w3-block w3-whitesmoke">Drug</button></p>
-        <p><button class="w3-btn w3-block w3-whitesmoke">Life</button></p>
-        <p><button class="w3-btn w3-block w3-whitesmoke">etc</button></p>
+        <p><button class="w3-btn w3-block w3-whitesmoke"><a href="counselorlist.html">BULLY</a></button></p>
+        <p><button class="w3-btn w3-block w3-whitesmoke">ACADEMIC</button></p>
+        <p><button class="w3-btn w3-block w3-whitesmoke">CAREER</button></p>
+        <p><button class="w3-btn w3-block w3-whitesmoke">DRUG</button></p>
+        <p><button class="w3-btn w3-block w3-whitesmoke">LIFE</button></p>
+        <p><button class="w3-btn w3-block w3-whitesmoke">ETC</button></p>
     </div>
 </div>
 
