--- a/public/teacherlogin.html
+++ b/public/teacherlogin.html
@@ -24,7 +24,7 @@
               <div class="login-form">
                   <input type="text" placeholder="Email or Username" class="input"><br />
                   <input type="password" placeholder="Password" class="input"><br />
-                  <div><a href="category.html"><img src="login.png" id="loginpng"></a></div>
+                  <div><a href="teachercategory.html"><img src="login.png" id="loginpng"></a></div>
                   <span><a href="#">I forgot my username or password.</a></span>
                </div>
               
