--- a/public/teachersignup.html
+++ b/public/teachersignup.html
@@ -26,7 +26,7 @@
                     <input type="text" placeholder="Your name" class="input"><br />
                     <input type="password" placeholder="Choose a Password" class="input"><br />
                     <div id="blank"> <br></div>
-                    <div><a href="login.html"><img src="signup.png" id="signuppng"></a></div>
+                    <div><a href="teacherlogin.html"><img src="signup.png" id="signuppng"></a></div>
                     <span id="teachersignup"><a href="signup.html">I am a student.</a></span>
                 </div>
               
